<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.raspiworks.M7Remote.MainActivity">



        <TextView
            android:text="@string/ip_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"

            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="22dp"
            android:id="@+id/LinearLayout1">

            <EditText

                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:inputType="numberDecimal"
                android:digits="0123456789."
                android:gravity="start"
                android:text=""
                android:ems="10"
                android:id="@+id/ipAddress"
                android:textColor="#00315e"
                />

            <Button
                android:text="@string/connect_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:id="@+id/connectButton"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="true"
            android:id="@+id/linearLayout2"
            android:layout_below="@+id/LinearLayout1">

            <TextView
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/hiddenChannelCount"
                android:layout_weight="0"
                android:gravity="end"
                />
            <TextView
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/connectionMessage"
                android:layout_weight="1"
                android:gravity="end"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2">

            <TextView
                android:text="@string/channel_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView20"
                android:gravity="center"
                android:layout_weight=".75" />

            <TextView
                android:text="@string/arm_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView21"
                android:gravity="center"
                android:layout_weight="1.25"
                />

            <TextView
                android:text="@string/status_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ArmedStatus"
                android:gravity="center"
                android:layout_weight="1" />


        </LinearLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_alignParentStart="true"
            android:id="@+id/scrollView1"
            android:layout_below="@+id/linearLayout3">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/channelTable">


            </TableLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scrollView1">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/nextButton"
                android:text="@string/next_button"
                android:onClick="nextButtonOnClick"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/button_blue"
                android:layout_weight="1"/>

        </LinearLayout>


</RelativeLayout>

