<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ignite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.raspiworks.M7Remote.IgniteActivity">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinearLayout1">

        <TextView
            android:text=""
            android:textSize="18sp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:id="@+id/Header" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout1"
        android:id="@+id/LinearLayout2">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            />



        <Space

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"

        android:layout_below="@+id/LinearLayout2">

        <TextView
            android:text="@string/channel_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView20"
            android:gravity="center"
            android:layout_weight="1" />

        <TextView
            android:text="@string/fire_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView21"
            android:gravity="center"
            android:layout_weight="1"
            />

        <TextView
            android:text="@string/status_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/Statuslabel"
            android:gravity="center"
            android:layout_weight="1" />


    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/scrollView"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/LinearLayout3"

        android:layout_alignParentStart="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firingTable">

        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinearLayout4"
        android:layout_below="@+id/scrollView"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/abort_button"
            android:background="@drawable/button_blue"
            android:shadowDx="0"
            android:shadowDy="0"
            android:onClick="abortOnClick"
            android:id="@+id/buttonAbort" />
    </LinearLayout>

</RelativeLayout>
